# IntelliDocPro

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  Dokumenten-Assistent (standalone).html  IntelliDocPro-standalone.html  Makefile  README.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: docker.yml
backend/: .env.example  README.md  pyproject.toml
backend/server/: agent_routes.py  app.py  jobs.py  store.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_bulk.py  test_compare.py  test_document.py  test_engines.py  test_envfile.py  test_normalize.py  test_pricing.py  test_refinement.py  test_schema.py  test_server.py  test_store.py
docs/adr/: 0001-reruns-use-current-agent-configuration.md  0002-unify-backend-under-intellidocpro.md
docstill/: .env.example  README.md  pyproject.toml
docstill/server/: app.py  jobs.py  platform_routes.py  store.py
docstill/src/docstill/: __init__.py  bulk.py  compare.py  errors.py  normalize.py  prompts.py  refinement.py  schema.py
docstill/src/docstill/engines/: __init__.py  azure_openai.py  base.py  claude.py  openai.py  openai_common.py
docstill/tests/: conftest.py  test_api.py  test_bulk.py  test_compare.py  test_document.py  test_engines.py  test_envfile.py  test_normalize.py  test_platform.py  test_pricing.py  test_refinement.py  test_schema.py  test_server.py  test_store.py
docstill/tests/integration/: pdf_fixture.py  test_live.py
webapp/: index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: App.tsx  app.css  index.css
webapp/src/api/: types.ts  (+1 more)
(+36 files in other folders)
